# keyboard-statistics

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  package.json  readme.md
.github/workflows/: build.yml  release.yml
document/: health-risk-prd.md  prd.md  rustlearn.md  step.md  steps.md  structure.md  techselect.md  updatelog.md
document/prototype/: index.html  script.js  style.css
keyboard-statistics/src-tauri/src/: main.rs
src/: index.html  key_popup.html  key_popup.js  lib.rs  main.js  main.rs  styles.css
src-tauri/: Cargo.toml  README.md  keyboard_events.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analyzer.rs  config.rs  database.rs  keyboard.rs  lib.rs  logger.rs  main.rs  tray.rs
src-tauri/src/commands/: recording.rs
src-tauri/src/core/: analyzer.rs  keyboard.rs
src-tauri/src/models/: event.rs  health.rs  mod.rs
src-tauri/src/utils/: mod.rs
src/core/: database.rs  mod.rs
src/css/: main.css
src/js/: api.js  charts.js  listeners.js  main.js  ui.js
src/lib/: logger.js
