[package]
name = "keyboard-statistics"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
windows = { version = "0.52.0", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_UI_Input"] }
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"

[[bin]]
name = "keyboard-statistics"
path = "src/main.rs"

[features]
custom-protocol = ["tauri/custom-protocol"]
